cheese/cheese-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stilton
  namespace: cheese
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    k8s-app: traefik-ingress-lb
    app: cheese
    task: stilton
---
apiVersion: v1
kind: Service
metadata:
  name: cheddar
  namespace: cheese
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    k8s-app: traefik-ingress-lb
    app: cheese
    task: cheddar
---
apiVersion: v1
kind: Service
metadata:
  name: wensleydale
  namespace: cheese
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    k8s-app: traefik-ingress-lb
    app: cheese
    task: wensleydale
